# ai-translation-desk

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 45a89d77b886_initial_tables.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py
backend/app/models/: __init__.py  fragment.py  question_log.py  session.py
backend/app/routers/: auth.py  fragments.py  generate.py  question_logs.py  sessions.py
backend/app/schemas/: fragment.py  generate.py  question_log.py  session.py
backend/app/vectordb/: base.py  chroma_store.py  factory.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  fragments.ts  generate.ts  questionLogs.ts  sessions.ts
frontend/src/components/fragments/: FragmentCard.tsx  FragmentForm.tsx
frontend/src/components/layout/: MobileNav.tsx
frontend/src/hooks/: useAuth.ts  useFragments.ts  useGenerate.ts  useQuestionLogs.ts  useSessions.ts
frontend/src/pages/: ConversationSupport.tsx  FragmentManagement.tsx  LoginPage.tsx  ReviewScreen.tsx
frontend/src/types/: index.ts
